# tic-tac-toe

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Procfile  README.md  app.json  requirements.txt  setup.py
experiments/: check_tt.py  draw_circle.py  draw_cross.py  draw_grid.py  minimal_window.py  np_string_manip.py  pygame_menu.py
misc/: fix_pygameMenu.sh
plan/: tic-tac-toe.drawio
src/: cell.cpp  cell.h  game_type.h  marker_type.h  pass_by_ref.cpp  player_type.h  strategy_type.h  tutorial.cpp
test/: CMakeLists.txt  test_cell.cpp
tests/board/: test_flat.py
tests/strategy/: test_minimax.py
xo/: __init__.py  board_utils.py  constants.py  forms.py  game.py  main.py  minimax.py  models.py  player.py  players.py  strategy.py  tests.py  transposition_table.py  urls.py  utils.py  view.py  views.py  win_state_utils.py
xo/board/: __init__.py  base.py  flat.py  utils.py
xo/mcts/: __init__.py  algorithm.py  transposition_table.py
xo/migrations/: 0001_initial.py  0002_auto_20190727_1943.py  0002_auto_20190808_2247.py  0003_auto_20190728_0316.py  0004_boardstate_is_max.py  0005_auto_20190728_1529.py  0008_boardstate_depth.py
xo/minimax/: __init__.py  minimax.py  transposition_table.py
xo/strategy/: __init__.py  base.py  minimax.py  utils.py
xo/templates/: base.html
xo/tests/: test_board_utils.py  test_win_state_utils.py  tests.py
xopyg/: __init__.py  board.py  color.py
xosite/: manage.py  settings.py  urls.py  wsgi.py
xosite/xo/: board_utils.py  forms.py  minimax.py  models.py  players.py  tests.py  urls.py  views.py
xosite/xosite/: urls.py  (+1 more)
(+45 files in other folders)
